--- a/DoAnMon/appsettings.json
+++ b/DoAnMon/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= DESKTOP-UK39E2K\\SQLEXPRESS01;Initial Catalog= DA_CLR;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
