Them Diem Danh va tinh lai DTB = 70% BT + 30% Diem Danh

--- a/DoAnMon/appsettings.json
+++ b/DoAnMon/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= .\\SQLEXPRESS01;Initial Catalog= DA_CLR;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Data Source= .\\SQLEXPRESS01;Initial Catalog= DA_CLR0001;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
