--- a/.gitignore
+++ b/.gitignore
@@ -363,7 +363,6 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # Ignore BAITAP folder
-
-/DoAnMon/wwwroot/BAITAP
-/DoAnMon/wwwroot/BAIGIANG/
-/DoAnMon/wwwroot/BAINOP/
+/BAITAP/
+/BAIGIANG/
+/BAINOP/
