--- a/.gitignore
+++ b/.gitignore
@@ -363,6 +363,7 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # Ignore BAITAP folder
-/BAITAP/
-/BAIGIANG/
-/BAINOP/
+/DoAnMon/wwwroot/BAITAP/
+/DoAnMon/wwwroot/BAIGIANG/
+/DoAnMon/wwwroot/BAINOP/
+
