--- a/DoAnMon/appsettings.json
+++ b/DoAnMon/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Data Source= BANGPHAN\\SQLEXPRESS;Initial Catalog= DA_CLR;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Bang",
+    "SenderEmail": "quyok8080@gmail.com",
+    "Username": "quyok8080@gmail.com",
+    "Password": "uaab ylsf uikl mnnd",
+    "EnableSsl": true
+  }
 }
+
+
