Sửa lại đường dẫn DB và sửa tên Email Name Sender

--- a/DoAnMon/appsettings.json
+++ b/DoAnMon/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= BANGPHAN\\SQLEXPRESS;Initial Catalog= DA_CLR;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR_Bang;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
@@ -12,7 +12,7 @@
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
     "Port": 587,
-    "SenderName": "Bang",
+    "SenderName": "ONLYA",
     "SenderEmail": "quyok8080@gmail.com",
     "Username": "quyok8080@gmail.com",
     "Password": "uaab ylsf uikl mnnd",
