Xong Giao diện Classroom Index

--- a/DoAnMon/appsettings.json
+++ b/DoAnMon/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR2;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR_Final;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
