Thay đổi logo cho create và thêm upload hình anh cho leave request

--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,4 @@ FodyWeavers.xsd
 /DoAnMon/wwwroot/messagefile
 /DoAnMon/wwwroot/Imgs_avtUser
 /DoAnMon/wwwroot/EXCEL
+/DoAnMon/wwwroot/LeaveRequest
