Add_Cloudynary và sửa upload ảnh với background classroom, avatar, image leave Request

--- a/DoAnMon/appsettings.json
+++ b/DoAnMon/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR_Final;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Data Source= .\\SQLEXPRESS;Initial Catalog= DA_CLR_TestCloudinary;Trusted_Connection=True;Encrypt=False"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dscrgyvj0",
+    "ApiKey": "433815246414856",
+    "ApiSecret": "yNW3M7aejZCZEIeawlgvO2Uj0Pw"
   },
   "Logging": {
     "LogLevel": {
