--- a/DoAnMon/DoAnMon.csproj
+++ b/DoAnMon/DoAnMon.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.1" />
+
     <PackageReference Include="EPPlus" Version="7.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
